Fix contrast on search icon
Fixes issue introduced in 0a9e16e.

--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -14725,12 +14725,12 @@ a > .ck-content code {
   margin-right: 0;
   border-radius: 0 var(--bs-btn-border-radius) var(--bs-btn-border-radius) 0;
   color: #fff;
-  background-color: #CA8800;
-  border-color: #CA8800;
+  background-color: #a36b00;
+  border-color: #a36b00;
 }
 .ck-content .block-bcbb-search .btn:hover, .ck-content .block-bcbb-search button.link:hover, .ck-content .block-bcbb-search .button:hover, .ck-content .block-bcbb-search .node-preview-container .node-preview-backlink:hover, .ck-content .node-preview-container .block-bcbb-search .node-preview-backlink:hover, .ck-content .block-bcbb-search .bcbb-search-wrapper .view-site-search .form-actions input:hover, .ck-content .bcbb-search-wrapper .view-site-search .form-actions .block-bcbb-search input:hover, .ck-content .block-bcbb-search .btn:focus, .ck-content .block-bcbb-search button.link:focus, .ck-content .block-bcbb-search .button:focus, .ck-content .block-bcbb-search .node-preview-container .node-preview-backlink:focus, .ck-content .node-preview-container .block-bcbb-search .node-preview-backlink:focus, .ck-content .block-bcbb-search .bcbb-search-wrapper .view-site-search .form-actions input:focus, .ck-content .bcbb-search-wrapper .view-site-search .form-actions .block-bcbb-search input:focus {
-  background-color: #986600;
-  border-color: #986600;
+  background-color: #8b5b00;
+  border-color: #8b5b00;
 }
 .ck-content ul.bcbb-inline-list {
   list-style: none;
