--- a/css/style.css
+++ b/css/style.css
@@ -15786,12 +15786,12 @@ h1.page-title::after, .page-title.h1::after {
   margin-right: 0;
   border-radius: 0 var(--bs-btn-border-radius) var(--bs-btn-border-radius) 0;
   color: #fff;
-  background-color: #CA8800;
-  border-color: #CA8800;
+  background-color: #a36b00;
+  border-color: #a36b00;
 }
 .block-bcbb-search .btn:hover, .block-bcbb-search button.link:hover, .block-bcbb-search .button:hover, .block-bcbb-search .node-preview-container .node-preview-backlink:hover, .node-preview-container .block-bcbb-search .node-preview-backlink:hover, .block-bcbb-search .bcbb-search-wrapper .view-site-search .form-actions input:hover, .bcbb-search-wrapper .view-site-search .form-actions .block-bcbb-search input:hover, .block-bcbb-search .btn:focus, .block-bcbb-search button.link:focus, .block-bcbb-search .button:focus, .block-bcbb-search .node-preview-container .node-preview-backlink:focus, .node-preview-container .block-bcbb-search .node-preview-backlink:focus, .block-bcbb-search .bcbb-search-wrapper .view-site-search .form-actions input:focus, .bcbb-search-wrapper .view-site-search .form-actions .block-bcbb-search input:focus {
-  background-color: #986600;
-  border-color: #986600;
+  background-color: #8b5b00;
+  border-color: #8b5b00;
 }
 
 ul.bcbb-inline-list {
